[metadata]
name = LapseDrivers
version = 1.0.0
author = Lehan Lotter
author_email = lehan.lotter@gmail.com
description = A predictive modeling pipeline designed to identify and understand the drivers of customer lapses. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LehanL/LapseDrivers
license = MIT